--- a/Python object over API.ipynb
+++ b/Python object over API.ipynb
@@ -4,19 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'requests'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-944baa82f1f4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpickle\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'requests'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import pickle\n",
@@ -26,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -77,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -153,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -179,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -243,9 +231,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "status code: 200\n",
+      "{'submodule1': {'file1': {'Hallo': {'__init__': ['name'], '__repr__': [], 'polite': ['toto', 't=3', '**kwargs'], 'test': []}, 'bonjour': ['x'], 'hello': ['y', 'x', 'z=1', '**kwargs']}, 'file2': {'goodbye': ['x', 'y', 'z']}}, 'submodule2': {'file3': {'bonjour': ['x'], 'hello': ['y', 'x', 'z=1', '**kwargs']}, 'file4': {'goodbye': ['x', 'y', 'z']}}}\n"
+     ]
+    }
+   ],
    "source": [
     "# here we request for the JSON describing the remote file structure.\n",
     "# The whole code is based on a precise file structure (see remote module for an example).\n",
@@ -258,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -283,9 +280,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "function = lambda name,**kwargs: generic_function(\"submodule1\", \"file1\", \"Hallo\", **{\"name\":name}, **kwargs)\n",
+      "function = lambda x,**kwargs: generic_function(\"submodule1\", \"file1\", \"bonjour\", **{\"x\":x}, **kwargs)\n",
+      "function = lambda y,x,z=1,**kwargs: generic_function(\"submodule1\", \"file1\", \"hello\", **{\"y\":y,\"x\":x,\"z\":z}, **kwargs)\n",
+      "function = lambda x,y,z,**kwargs: generic_function(\"submodule1\", \"file2\", \"goodbye\", **{\"x\":x,\"y\":y,\"z\":z}, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "# here we create local proxy for distant submodule1\n",
     "submodule1 = create_class_from_name('submodule1')"
@@ -293,9 +301,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# we run one function of the submodule\n",
     "submodule1.file1.hello(3, 4, s=5)"
@@ -303,9 +322,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "creating class dynamically...\n",
+      "function = lambda _dic,**kwargs: generic_function(\"submodule1\", \"file1\", \"Hallo\", \"__repr__\", **{\"_dic\":_dic}, **kwargs)\n",
+      "function = lambda _dic,toto,t=3,**kwargs: generic_function(\"submodule1\", \"file1\", \"Hallo\", \"polite\", **{\"_dic\":_dic,\"toto\":toto,\"t\":t}, **kwargs)\n",
+      "function = lambda _dic,**kwargs: generic_function(\"submodule1\", \"file1\", \"Hallo\", \"test\", **{\"_dic\":_dic}, **kwargs)\n",
+      "in change_instance_functions_to_pass_automatically_obj_and_dic\n",
+      "instance.temp = lambda **kwargs: getattr(_dict_of_variables[\"2017-09-02 11:00:00.627338-0\"], _dict_of_variables[\"2017-09-02 11:00:00.627338-2\"])(_obj = _dict_of_variables[\"2017-09-02 11:00:00.627338-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-02 11:00:00.627338-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{}, **kwargs)\n",
+      "instance.temp = lambda toto=\"__$__\",t=\"__$__\",**kwargs: getattr(_dict_of_variables[\"2017-09-02 11:00:00.627338-0\"], _dict_of_variables[\"2017-09-02 11:00:00.627338-3\"])(_obj = _dict_of_variables[\"2017-09-02 11:00:00.627338-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-02 11:00:00.627338-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{\"toto\":toto,\"t\":t}, **kwargs)\n",
+      "instance.temp = lambda **kwargs: getattr(_dict_of_variables[\"2017-09-02 11:00:00.627338-0\"], _dict_of_variables[\"2017-09-02 11:00:00.627338-4\"])(_obj = _dict_of_variables[\"2017-09-02 11:00:00.627338-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-02 11:00:00.627338-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{}, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "# we instanciate a class of the submodule\n",
     "x = submodule1.file1.Hallo(name=\"Pierre\")"
@@ -313,30 +347,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "__main__.Hallo"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# the type is the good one (ninja trick to do that...)\n",
+    "# the type is the good one\n",
     "type(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Pierre',\n",
+       " 'polite': <function __main__.<lambda>>,\n",
+       " 'sentence': 'Hallo Pierre !',\n",
+       " 'test': <function __main__.<lambda>>}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x.__dict__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "updating object...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "My name is Pierre"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# the object has both attributes and methods (to be precise, it has no method, but rather functions)\n",
     "x"
@@ -344,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -355,56 +432,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "f = x.__repr__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "f()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Paul',\n",
+       " 'polite': <function __main__.<lambda>>,\n",
+       " 'sentence': 'Hallo Pierre !',\n",
+       " 'test': <function __main__.<lambda>>}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x.__dict__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "updating object...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "My name is Paul"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "x.sentence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "updating object...\n"
+     ]
+    }
+   ],
    "source": [
     "# below lies the magic ! We can call remote methods on objects and they will be executed almost as usual.\n",
     "# The method can do two things (and in this example the method 'polite' actually does these two things) : \n",
@@ -416,41 +504,70 @@
     "# Two delicate things are handled behind the scenes : the **kwargs are working ('s' is a kwarg here), and the by-default\n",
     "# arguments are working as well (if you look at polite, you will see it has a by-default 't' argument)\n",
     "\n",
-    "res = x.polite(toto='Marion', s=2)"
+    "res = x.polite(toto='Smith', s=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Welcome to my nice hotel, Mr Smith'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "updating object...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "My name is Paul"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "updating object...\n",
+      "Welcome to my nice hotel, Mr 42\n"
+     ]
+    }
+   ],
    "source": [
     "res = x.polite(toto='42')\n",
     "print(res)"
@@ -458,53 +575,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "creating class dynamically...\n",
+      "function = lambda _dic,**kwargs: generic_function(\"submodule1\", \"file1\", \"Hallo\", \"__repr__\", **{\"_dic\":_dic}, **kwargs)\n",
+      "function = lambda _dic,toto,t=3,**kwargs: generic_function(\"submodule1\", \"file1\", \"Hallo\", \"polite\", **{\"_dic\":_dic,\"toto\":toto,\"t\":t}, **kwargs)\n",
+      "function = lambda _dic,**kwargs: generic_function(\"submodule1\", \"file1\", \"Hallo\", \"test\", **{\"_dic\":_dic}, **kwargs)\n",
+      "in change_instance_functions_to_pass_automatically_obj_and_dic\n",
+      "instance.temp = lambda **kwargs: getattr(_dict_of_variables[\"2017-09-02 11:00:07.100178-0\"], _dict_of_variables[\"2017-09-02 11:00:07.100178-2\"])(_obj = _dict_of_variables[\"2017-09-02 11:00:07.100178-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-02 11:00:07.100178-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{}, **kwargs)\n",
+      "instance.temp = lambda toto=\"__$__\",t=\"__$__\",**kwargs: getattr(_dict_of_variables[\"2017-09-02 11:00:07.100178-0\"], _dict_of_variables[\"2017-09-02 11:00:07.100178-3\"])(_obj = _dict_of_variables[\"2017-09-02 11:00:07.100178-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-02 11:00:07.100178-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{\"toto\":toto,\"t\":t}, **kwargs)\n",
+      "instance.temp = lambda **kwargs: getattr(_dict_of_variables[\"2017-09-02 11:00:07.100178-0\"], _dict_of_variables[\"2017-09-02 11:00:07.100178-4\"])(_obj = _dict_of_variables[\"2017-09-02 11:00:07.100178-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-02 11:00:07.100178-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{}, **kwargs)\n",
+      "updating object...\n",
+      "Welcome to my nice hotel, Mr Cauchy\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Hallo Augustin Louis Cauchy'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# another example, without all the intermediate steps. \n",
     "# The only weird thing compared to what we could expect is the [1]. All the rest is normal.\n",
     "# This line requires two requests : one to instantiate the object of the class Hallo(), and one to execute the method 'polite'\n",
-    "obj = submodule1.file1.Hallo(name=\"Olivier\")\n",
-    "print(obj.polite('Borderies'))\n",
+    "obj = submodule1.file1.Hallo(name='Augustin Louis')\n",
+    "print(obj.polite('Cauchy'))\n",
     "obj.sentence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "x.test()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "updating object...\n",
+      "updating object...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'2017-09-02 11:00:00.627338-0': {'name': 'Pierre', 'sentence': 'Hallo Pierre !', '__repr__': <function <lambda> at 0x000001A1705C4C80>, 'polite': <function <lambda> at 0x000001A1705C4E18>, 'test': <function <lambda> at 0x000001A1705C4F28>},\n",
+       " '2017-09-02 11:00:00.627338-1': My name is Paul,\n",
+       " '2017-09-02 11:00:00.627338-2': '__repr__',\n",
+       " '2017-09-02 11:00:00.627338-3': 'polite',\n",
+       " '2017-09-02 11:00:00.627338-4': 'test',\n",
+       " '2017-09-02 11:00:07.100178-0': {'name': 'Augustin Louis', 'sentence': 'Hallo Augustin Louis !', '__repr__': <function <lambda> at 0x000001A1705C47B8>, 'polite': <function <lambda> at 0x000001A1705C4A60>, 'test': <function <lambda> at 0x000001A1705DC400>},\n",
+       " '2017-09-02 11:00:07.100178-1': My name is Augustin Louis,\n",
+       " '2017-09-02 11:00:07.100178-2': '__repr__',\n",
+       " '2017-09-02 11:00:07.100178-3': 'polite',\n",
+       " '2017-09-02 11:00:07.100178-4': 'test'}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "_dict_of_variables"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
