--- a/demo_Python-object-over-API.ipynb
+++ b/demo_Python-object-over-API.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import requests\n",
@@ -71,7 +73,7 @@
    },
    "outputs": [],
    "source": [
-    "def generic_function(submodule_name, file_name, function_name, method_name = None, **args):\n",
+    "def generic_function(submodule_name, file_name, function_name, method_name=None, **args):\n",
     "    '''\n",
     "    Post a request to the server asking to execute the corresponding remote function.\n",
     "    \n",
@@ -334,9 +336,9 @@
       "function = lambda _dic,toto,t=3,**kwargs: generic_function(\"submodule1\", \"file1\", \"Hallo\", \"polite\", **{\"_dic\":_dic,\"toto\":toto,\"t\":t}, **kwargs)\n",
       "function = lambda _dic,**kwargs: generic_function(\"submodule1\", \"file1\", \"Hallo\", \"test\", **{\"_dic\":_dic}, **kwargs)\n",
       "in change_instance_functions_to_pass_automatically_obj_and_dic\n",
-      "instance.temp = lambda **kwargs: getattr(_dict_of_variables[\"2017-09-02 11:00:00.627338-0\"], _dict_of_variables[\"2017-09-02 11:00:00.627338-2\"])(_obj = _dict_of_variables[\"2017-09-02 11:00:00.627338-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-02 11:00:00.627338-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{}, **kwargs)\n",
-      "instance.temp = lambda toto=\"__$__\",t=\"__$__\",**kwargs: getattr(_dict_of_variables[\"2017-09-02 11:00:00.627338-0\"], _dict_of_variables[\"2017-09-02 11:00:00.627338-3\"])(_obj = _dict_of_variables[\"2017-09-02 11:00:00.627338-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-02 11:00:00.627338-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{\"toto\":toto,\"t\":t}, **kwargs)\n",
-      "instance.temp = lambda **kwargs: getattr(_dict_of_variables[\"2017-09-02 11:00:00.627338-0\"], _dict_of_variables[\"2017-09-02 11:00:00.627338-4\"])(_obj = _dict_of_variables[\"2017-09-02 11:00:00.627338-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-02 11:00:00.627338-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{}, **kwargs)\n"
+      "instance.temp = lambda **kwargs: getattr(_dict_of_variables[\"2017-09-03 22:22:44.717735-0\"], _dict_of_variables[\"2017-09-03 22:22:44.717735-2\"])(_obj = _dict_of_variables[\"2017-09-03 22:22:44.717735-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-03 22:22:44.717735-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{}, **kwargs)\n",
+      "instance.temp = lambda toto=\"__$__\",t=\"__$__\",**kwargs: getattr(_dict_of_variables[\"2017-09-03 22:22:44.717735-0\"], _dict_of_variables[\"2017-09-03 22:22:44.717735-3\"])(_obj = _dict_of_variables[\"2017-09-03 22:22:44.717735-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-03 22:22:44.717735-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{\"toto\":toto,\"t\":t}, **kwargs)\n",
+      "instance.temp = lambda **kwargs: getattr(_dict_of_variables[\"2017-09-03 22:22:44.717735-0\"], _dict_of_variables[\"2017-09-03 22:22:44.717735-4\"])(_obj = _dict_of_variables[\"2017-09-03 22:22:44.717735-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-03 22:22:44.717735-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{}, **kwargs)\n"
      ]
     }
    ],
@@ -587,9 +589,9 @@
       "function = lambda _dic,toto,t=3,**kwargs: generic_function(\"submodule1\", \"file1\", \"Hallo\", \"polite\", **{\"_dic\":_dic,\"toto\":toto,\"t\":t}, **kwargs)\n",
       "function = lambda _dic,**kwargs: generic_function(\"submodule1\", \"file1\", \"Hallo\", \"test\", **{\"_dic\":_dic}, **kwargs)\n",
       "in change_instance_functions_to_pass_automatically_obj_and_dic\n",
-      "instance.temp = lambda **kwargs: getattr(_dict_of_variables[\"2017-09-02 11:00:07.100178-0\"], _dict_of_variables[\"2017-09-02 11:00:07.100178-2\"])(_obj = _dict_of_variables[\"2017-09-02 11:00:07.100178-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-02 11:00:07.100178-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{}, **kwargs)\n",
-      "instance.temp = lambda toto=\"__$__\",t=\"__$__\",**kwargs: getattr(_dict_of_variables[\"2017-09-02 11:00:07.100178-0\"], _dict_of_variables[\"2017-09-02 11:00:07.100178-3\"])(_obj = _dict_of_variables[\"2017-09-02 11:00:07.100178-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-02 11:00:07.100178-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{\"toto\":toto,\"t\":t}, **kwargs)\n",
-      "instance.temp = lambda **kwargs: getattr(_dict_of_variables[\"2017-09-02 11:00:07.100178-0\"], _dict_of_variables[\"2017-09-02 11:00:07.100178-4\"])(_obj = _dict_of_variables[\"2017-09-02 11:00:07.100178-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-02 11:00:07.100178-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{}, **kwargs)\n",
+      "instance.temp = lambda **kwargs: getattr(_dict_of_variables[\"2017-09-03 22:22:44.840591-0\"], _dict_of_variables[\"2017-09-03 22:22:44.840591-2\"])(_obj = _dict_of_variables[\"2017-09-03 22:22:44.840591-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-03 22:22:44.840591-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{}, **kwargs)\n",
+      "instance.temp = lambda toto=\"__$__\",t=\"__$__\",**kwargs: getattr(_dict_of_variables[\"2017-09-03 22:22:44.840591-0\"], _dict_of_variables[\"2017-09-03 22:22:44.840591-3\"])(_obj = _dict_of_variables[\"2017-09-03 22:22:44.840591-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-03 22:22:44.840591-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{\"toto\":toto,\"t\":t}, **kwargs)\n",
+      "instance.temp = lambda **kwargs: getattr(_dict_of_variables[\"2017-09-03 22:22:44.840591-0\"], _dict_of_variables[\"2017-09-03 22:22:44.840591-4\"])(_obj = _dict_of_variables[\"2017-09-03 22:22:44.840591-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-03 22:22:44.840591-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{}, **kwargs)\n",
       "updating object...\n",
       "Welcome to my nice hotel, Mr Cauchy\n"
      ]
@@ -630,16 +632,16 @@
     {
      "data": {
       "text/plain": [
-       "{'2017-09-02 11:00:00.627338-0': {'name': 'Pierre', 'sentence': 'Hallo Pierre !', '__repr__': <function <lambda> at 0x000001A1705C4C80>, 'polite': <function <lambda> at 0x000001A1705C4E18>, 'test': <function <lambda> at 0x000001A1705C4F28>},\n",
-       " '2017-09-02 11:00:00.627338-1': My name is Paul,\n",
-       " '2017-09-02 11:00:00.627338-2': '__repr__',\n",
-       " '2017-09-02 11:00:00.627338-3': 'polite',\n",
-       " '2017-09-02 11:00:00.627338-4': 'test',\n",
-       " '2017-09-02 11:00:07.100178-0': {'name': 'Augustin Louis', 'sentence': 'Hallo Augustin Louis !', '__repr__': <function <lambda> at 0x000001A1705C47B8>, 'polite': <function <lambda> at 0x000001A1705C4A60>, 'test': <function <lambda> at 0x000001A1705DC400>},\n",
-       " '2017-09-02 11:00:07.100178-1': My name is Augustin Louis,\n",
-       " '2017-09-02 11:00:07.100178-2': '__repr__',\n",
-       " '2017-09-02 11:00:07.100178-3': 'polite',\n",
-       " '2017-09-02 11:00:07.100178-4': 'test'}"
+       "{'2017-09-03 22:22:44.717735-0': {'name': 'Pierre', 'sentence': 'Hallo Pierre !', '__repr__': <function <lambda> at 0x1164031e0>, 'polite': <function <lambda> at 0x116403378>, 'test': <function <lambda> at 0x116403510>},\n",
+       " '2017-09-03 22:22:44.717735-1': My name is Paul,\n",
+       " '2017-09-03 22:22:44.717735-2': '__repr__',\n",
+       " '2017-09-03 22:22:44.717735-3': 'polite',\n",
+       " '2017-09-03 22:22:44.717735-4': 'test',\n",
+       " '2017-09-03 22:22:44.840591-0': {'name': 'Augustin Louis', 'sentence': 'Hallo Augustin Louis !', '__repr__': <function <lambda> at 0x115351378>, 'polite': <function <lambda> at 0x115351a60>, 'test': <function <lambda> at 0x115351048>},\n",
+       " '2017-09-03 22:22:44.840591-1': My name is Augustin Louis,\n",
+       " '2017-09-03 22:22:44.840591-2': '__repr__',\n",
+       " '2017-09-03 22:22:44.840591-3': 'polite',\n",
+       " '2017-09-03 22:22:44.840591-4': 'test'}"
       ]
      },
      "execution_count": 24,
@@ -677,7 +679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
