make TODO a md file

--- a/demo_Python-object-over-API.ipynb
+++ b/demo_Python-object-over-API.ipynb
@@ -367,9 +367,9 @@
       "function = lambda _dic,toto,t=3,**kwargs: generic_function(\"submodule1\", \"file1\", \"Hallo\", \"polite\", **{\"_dic\":_dic,\"toto\":toto,\"t\":t}, **kwargs)\n",
       "function = lambda _dic,**kwargs: generic_function(\"submodule1\", \"file1\", \"Hallo\", \"test\", **{\"_dic\":_dic}, **kwargs)\n",
       "in change_instance_functions_to_pass_obj_and_dic\n",
-      "instance.temp = lambda **kwargs: getattr(_dict_of_variables[\"2017-09-03 22:45:15.365795-0\"], _dict_of_variables[\"2017-09-03 22:45:15.365795-2\"])(_obj = _dict_of_variables[\"2017-09-03 22:45:15.365795-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-03 22:45:15.365795-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{}, **kwargs)\n",
-      "instance.temp = lambda toto=\"__$__\",t=\"__$__\",**kwargs: getattr(_dict_of_variables[\"2017-09-03 22:45:15.365795-0\"], _dict_of_variables[\"2017-09-03 22:45:15.365795-3\"])(_obj = _dict_of_variables[\"2017-09-03 22:45:15.365795-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-03 22:45:15.365795-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{\"toto\":toto,\"t\":t}, **kwargs)\n",
-      "instance.temp = lambda **kwargs: getattr(_dict_of_variables[\"2017-09-03 22:45:15.365795-0\"], _dict_of_variables[\"2017-09-03 22:45:15.365795-4\"])(_obj = _dict_of_variables[\"2017-09-03 22:45:15.365795-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-03 22:45:15.365795-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{}, **kwargs)\n"
+      "instance.temp = lambda **kwargs: getattr(_dict_of_variables[\"2017-09-03 22:48:46.382459-0\"], _dict_of_variables[\"2017-09-03 22:48:46.382459-2\"])(_obj = _dict_of_variables[\"2017-09-03 22:48:46.382459-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-03 22:48:46.382459-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{}, **kwargs)\n",
+      "instance.temp = lambda toto=\"__$__\",t=\"__$__\",**kwargs: getattr(_dict_of_variables[\"2017-09-03 22:48:46.382459-0\"], _dict_of_variables[\"2017-09-03 22:48:46.382459-3\"])(_obj = _dict_of_variables[\"2017-09-03 22:48:46.382459-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-03 22:48:46.382459-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{\"toto\":toto,\"t\":t}, **kwargs)\n",
+      "instance.temp = lambda **kwargs: getattr(_dict_of_variables[\"2017-09-03 22:48:46.382459-0\"], _dict_of_variables[\"2017-09-03 22:48:46.382459-4\"])(_obj = _dict_of_variables[\"2017-09-03 22:48:46.382459-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-03 22:48:46.382459-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{}, **kwargs)\n"
      ]
     }
    ],
@@ -626,9 +626,9 @@
       "function = lambda _dic,toto,t=3,**kwargs: generic_function(\"submodule1\", \"file1\", \"Hallo\", \"polite\", **{\"_dic\":_dic,\"toto\":toto,\"t\":t}, **kwargs)\n",
       "function = lambda _dic,**kwargs: generic_function(\"submodule1\", \"file1\", \"Hallo\", \"test\", **{\"_dic\":_dic}, **kwargs)\n",
       "in change_instance_functions_to_pass_obj_and_dic\n",
-      "instance.temp = lambda **kwargs: getattr(_dict_of_variables[\"2017-09-03 22:45:15.488303-0\"], _dict_of_variables[\"2017-09-03 22:45:15.488303-2\"])(_obj = _dict_of_variables[\"2017-09-03 22:45:15.488303-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-03 22:45:15.488303-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{}, **kwargs)\n",
-      "instance.temp = lambda toto=\"__$__\",t=\"__$__\",**kwargs: getattr(_dict_of_variables[\"2017-09-03 22:45:15.488303-0\"], _dict_of_variables[\"2017-09-03 22:45:15.488303-3\"])(_obj = _dict_of_variables[\"2017-09-03 22:45:15.488303-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-03 22:45:15.488303-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{\"toto\":toto,\"t\":t}, **kwargs)\n",
-      "instance.temp = lambda **kwargs: getattr(_dict_of_variables[\"2017-09-03 22:45:15.488303-0\"], _dict_of_variables[\"2017-09-03 22:45:15.488303-4\"])(_obj = _dict_of_variables[\"2017-09-03 22:45:15.488303-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-03 22:45:15.488303-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{}, **kwargs)\n",
+      "instance.temp = lambda **kwargs: getattr(_dict_of_variables[\"2017-09-03 22:48:46.504694-0\"], _dict_of_variables[\"2017-09-03 22:48:46.504694-2\"])(_obj = _dict_of_variables[\"2017-09-03 22:48:46.504694-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-03 22:48:46.504694-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{}, **kwargs)\n",
+      "instance.temp = lambda toto=\"__$__\",t=\"__$__\",**kwargs: getattr(_dict_of_variables[\"2017-09-03 22:48:46.504694-0\"], _dict_of_variables[\"2017-09-03 22:48:46.504694-3\"])(_obj = _dict_of_variables[\"2017-09-03 22:48:46.504694-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-03 22:48:46.504694-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{\"toto\":toto,\"t\":t}, **kwargs)\n",
+      "instance.temp = lambda **kwargs: getattr(_dict_of_variables[\"2017-09-03 22:48:46.504694-0\"], _dict_of_variables[\"2017-09-03 22:48:46.504694-4\"])(_obj = _dict_of_variables[\"2017-09-03 22:48:46.504694-1\"], _dic=dict((k, v) for (k, v) in _dict_of_variables[\"2017-09-03 22:48:46.504694-1\"].__dict__.items() if not hasattr(v, \"__call__\")),**{}, **kwargs)\n",
       "updating object...\n",
       "Welcome to my nice hotel, Mr Cauchy\n"
      ]
@@ -672,16 +672,16 @@
     {
      "data": {
       "text/plain": [
-       "{'2017-09-03 22:45:15.365795-0': {'name': 'Pierre', 'sentence': 'Hallo Pierre !', '__repr__': <function <lambda> at 0x1194c2d90>, 'polite': <function <lambda> at 0x1194c2ea0>, 'test': <function <lambda> at 0x1195430d0>},\n",
-       " '2017-09-03 22:45:15.365795-1': My name is Paul,\n",
-       " '2017-09-03 22:45:15.365795-2': '__repr__',\n",
-       " '2017-09-03 22:45:15.365795-3': 'polite',\n",
-       " '2017-09-03 22:45:15.365795-4': 'test',\n",
-       " '2017-09-03 22:45:15.488303-0': {'name': 'Augustin Louis', 'sentence': 'Hallo Augustin Louis !', '__repr__': <function <lambda> at 0x119543378>, 'polite': <function <lambda> at 0x119543400>, 'test': <function <lambda> at 0x119543730>},\n",
-       " '2017-09-03 22:45:15.488303-1': My name is Augustin Louis,\n",
-       " '2017-09-03 22:45:15.488303-2': '__repr__',\n",
-       " '2017-09-03 22:45:15.488303-3': 'polite',\n",
-       " '2017-09-03 22:45:15.488303-4': 'test'}"
+       "{'2017-09-03 22:48:46.382459-0': {'name': 'Pierre', 'sentence': 'Hallo Pierre !', '__repr__': <function <lambda> at 0x117085e18>, 'polite': <function <lambda> at 0x1170ea048>, 'test': <function <lambda> at 0x1170ea1e0>},\n",
+       " '2017-09-03 22:48:46.382459-1': My name is Paul,\n",
+       " '2017-09-03 22:48:46.382459-2': '__repr__',\n",
+       " '2017-09-03 22:48:46.382459-3': 'polite',\n",
+       " '2017-09-03 22:48:46.382459-4': 'test',\n",
+       " '2017-09-03 22:48:46.504694-0': {'name': 'Augustin Louis', 'sentence': 'Hallo Augustin Louis !', '__repr__': <function <lambda> at 0x1170ea510>, 'polite': <function <lambda> at 0x1170ea488>, 'test': <function <lambda> at 0x1170ea950>},\n",
+       " '2017-09-03 22:48:46.504694-1': My name is Augustin Louis,\n",
+       " '2017-09-03 22:48:46.504694-2': '__repr__',\n",
+       " '2017-09-03 22:48:46.504694-3': 'polite',\n",
+       " '2017-09-03 22:48:46.504694-4': 'test'}"
       ]
      },
      "execution_count": 24,
